<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_text"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/input_a"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_A_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/input_a"
android:textCursorDrawable="@drawable/cursor_customer"
            android:inputType="number"
            tools:ignore="LabelFor" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"

            android:layout_height="match_parent"

            android:gravity="fill"
            android:text="@string/input_b"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/input_B_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/input_b"
            android:inputType="number"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:text="@string/input_kq"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_KQ_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:enabled="false"
            android:hint="@string/input_kq"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/txt_tong"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/txt_hieu"
            tools:ignore="ButtonStyle" />

        <Button

            android:id="@+id/btn_tich"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_tich"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_thuong"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/txt_thuong"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>